Removing all Apache HTTP Client dependencies, including DownloadUtil and Digest Auth, which will be re-written as a separate module